<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/root_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_gradient">

        <!-- Toolbar -->
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/theme_green"
            app:cardCornerRadius="@dimen/_13sdp"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginVertical="@dimen/_6sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wallet_balance"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical" />
                <TextView
                    android:id="@+id/wallet_bal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 20,000.00"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:gravity="end" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Dashboard Info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:padding="8dp"
                android:layout_margin="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_distributors"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onboarded_merchants"
                    android:textColor="@color/text_grey"
                    android:textSize="@dimen/_8ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="85"
                    android:textColor="@color/text_black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:padding="8dp"
                android:layout_margin="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_distributors"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onboarded_sales_team"
                    android:textColor="@color/text_grey"
                    android:textSize="@dimen/_8ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25"
                    android:textColor="@color/text_black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:padding="8dp"
                android:layout_margin="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_distributors"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inven_retail"
                    android:textColor="@color/text_grey"
                    android:textSize="@dimen/_8ssp"
                    android:paddingEnd="@dimen/_9ssp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="421.4K"
                    android:textColor="@color/text_black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
        </LinearLayout>



        <!-- Total Billing, Money Collected, Total Payment Collected -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/total_bill"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/total_billing"
                    android:maxLines="2"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text_black"
                    android:drawableEnd="@drawable/ic_arrow_forward_border"
                    android:padding="@dimen/_8sdp"
                    android:drawablePadding="@dimen/_18sdp"
                    android:gravity="center_vertical"
                    android:layout_gravity="start"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/money_collect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/money_collected"
                    android:textColor="@color/text_black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13ssp"
                    android:background="@drawable/button_background"
                    android:drawableEnd="@drawable/ic_arrow_forward_border"
                    android:padding="@dimen/_5sdp"
                    android:drawablePadding="18dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</layout>


